--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - "3001:3000"
     environment:
       - NODE_ENV=development
+      - JWT_SECRET=${JWT_SECRET:-dev_secret_change_me}
+      - JWT_EXPIRES_IN=${JWT_EXPIRES_IN:-1h}
       - DATABASE_HOST=postgres
       - DATABASE_PORT=5432
       - DATABASE_NAME=kanban_api
